try the grid css

--- a/index.html
+++ b/index.html
@@ -9,14 +9,15 @@
   <body>
     <header>
       <h1>Elade / devlopment</h1>
-      <nav>
-        <a href="" class="nav-link">Home</a>
-        <a href="" class="nav-link">Products</a>
-        <a href="" class="nav-link">Contact</a>
+      <nav class="grid">
+        <a href="" class="g-col-6">Home</a>
+        <a href="" class="g-col-4">Products</a>
+        <a href="" class="g-col-4">Contact</a>
       </nav>
     </header>
     <main>
-      
+      <section class="grid"></section>
+      <section></section>
     </main>
     <footer>
 
