--- a/index.html
+++ b/index.html
@@ -4,20 +4,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
     <title>BootStrap Learning</title>
   </head>
   <body>
     <header>
-      <h1>Elade / devlopment</h1>
-      <nav class="grid">
-        <a href="" class="g-col-6">Home</a>
-        <a href="" class="g-col-4">Products</a>
-        <a href="" class="g-col-4">Contact</a>
-      </nav>
+      <nav class="navbar navbar-dark bg-primary">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="" alt="" width="30" height="24" class="d-inline-block align-text-top">
+            Bootstrap
+          </a>
+        </div>
+        </nav>
     </header>
     <main>
-      <section class="grid"></section>
-      <section></section>
     </main>
     <footer>
 
